--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "start": "node build/main.js",
+    "prestart": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "rxjs": "^7.4.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
